--- a/index.html
+++ b/index.html
@@ -225,11 +225,11 @@
 .contact-container { 
   max-width: 500px; 
   margin: 0 auto; 
-  background: rgba(15, 32, 39, 0.7); /* dark semi-transparent to match site */
+  background: rgba(15, 32, 39, 0.85); /* slightly darker to match site bg */
   backdrop-filter: blur(12px);        /* glassy effect */
   padding: 25px 20px; 
   border-radius: 20px; 
-  border: 1px solid rgba(255,255,255,0.1); /* subtle border */
+  border: 1px solid rgba(255,255,255,0.05); /* subtle border */
   box-shadow: 0 8px 25px rgba(0,0,0,0.5); 
   position: relative; 
   z-index: 1; 
@@ -245,9 +245,9 @@
 .contact-form textarea { 
   width: 100%; 
   padding: 10px 12px; 
-  border: 1px solid rgba(255,255,255,0.15); /* subtle inner border */
+  border: 1px solid rgba(255,255,255,0.15); 
   border-radius: 10px; 
-  background: rgba(255,255,255,0.05); 
+  background: rgba(15, 32, 39, 0.6); /* darker input bg */
   color: #fff; 
   font-size: 0.95rem; 
   outline: none; 
@@ -261,7 +261,7 @@
 
 .contact-form input:focus, 
 .contact-form textarea:focus { 
-  background: rgba(255,255,255,0.1); 
+  background: rgba(15, 32, 39, 0.8); 
   box-shadow: 0 0 12px #00f5d4; 
   border-color: #00f5d4;
 }
@@ -287,7 +287,7 @@
   left: 10px; 
   font-size: 0.78rem; 
   color: #00f5d4; 
-  background: rgba(15, 32, 39, 0.8); 
+  background: rgba(15, 32, 39, 0.85); 
   border-radius: 6px; 
 }
 
@@ -310,6 +310,7 @@
   transform: translateY(-2px) scale(1.03); 
   box-shadow: 0 6px 22px rgba(14,165,233,0.6); 
 }
+
 
     /* Container */
     .social-links {
