--- a/index.html
+++ b/index.html
@@ -183,14 +183,14 @@
   font-size: 1.1rem;
   line-height: 1.6;
   font-weight: 300;
-  color: #333;
+  color: #fff;
   max-width: 600px;
 }
 
 #about .photo {
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;        /* circular */
+  width: 300px;
+  height: 300px;
+  border-radius: 5%;        /* circular */
   object-fit: cover;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
 }
