--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
 
   <!-- About -->
   <section id="about">
-    <h2>About Me</h2>
+    <h2>About Me</h2><br>
     <p>Hi, I’m Anmol Srivastava — a passionate developer with a strong foundation in programming and problem-solving. I have hands-on experience in Java, C++, Python, HTML, CSS, JavaScript, and MySQL, and I’m constantly exploring new technologies to expand my skillset.
 
 I enjoy building projects that bring ideas to life, whether it’s a dynamic web application, a problem-solving tool, or an interactive experiment. My journey in tech is driven by curiosity and a desire to keep learning, improving, and creating impactful solutions.
